--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,71 @@
     padding: 0;
     max-width: 100vw;
 }
+
+.center{
+    display:grid ;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    width: 100%;
+    align-items: center;
+}
+.center input[type="text"],
+.center input[type="email"],
+.center input[type="tel"] {
+  margin: 5px;  /* Add space between input fields */
+}
+img{
+    width: 200px;
+}
+
+#list-product{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: blue;
+}
+
+#list-product .card{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+#delivery-type{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    
+}
+
+.delivery-container{
+    display: flex;
+}
+.delivery-details{
+    display: flex;
+    align-items: center;
+    background-color: red;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    margin: auto;
+}
+.delivery-runner-details{
+    display: none;
+} 
+
+.delivery-self-details{
+    display: none;
+}
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center ;
+}
+
+.total-bill, .push{
+    justify-content: center;
+    display: flex;
+}
